# country-subdivision-map-decks

./: .gitignore  LESSONS.md  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: anki-workbench.yml
data/subdivisions/: all.csv  iran.csv  mexico.csv  south-africa.csv  turkey.csv
maps/: INSPECTION.md  README.md  manifest.tsv
release/: iran.md  iran.toml  mexico.md  mexico.toml  south-africa.md  south-africa.toml  turkey.md  turkey.toml
scripts/: build_iran_apkg.py  build_mexico_apkg.py  build_south_africa_apkg.py  build_turkey_apkg.py  capture_readme_screenshot.py  fetch_commons_maps.sh  fetch_subdivision_data.py  inspect_svg_maps.sh  normalize_map_filenames.sh
templates/: iran.css  mexico.css  south_africa.css  turkey.css
