[project]
name = "country-subdivision-map-decks"
version = "0.1.0"
description = "Source data and deck builders for country subdivision map decks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
deck = [
  "genanki>=0.13.1",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"
