[project]
name = "country-subdivision-map-decks"
version = "0.1.0"
description = "Source data and deck builders for country subdivision map decks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
deck = [
  "genanki>=0.13.1",
]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.6.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
