[project]
name = "country-subdivision-map-decks"
version = "0.1.0"
description = "Source data and deck builders for country subdivision map decks."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
deck = [
  "genanki>=0.13.1",
]
dev = [
  "anki-addon-workbench[gui]==0.4.0",
  "mypy>=1.13.0",
  "ruff>=0.6.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"

[tool.anki-addon-workbench]
project_name = "Country Subdivision Map Decks"
seed_apkgs = [
  "out/south-africa-provinces.apkg",
  "out/mexico-federative-entities.apkg",
  "out/turkey-regions.apkg",
  "out/iran-provinces.apkg",
]
anki_version = "25.09"
docker_image = "country-subdivision-map-decks-anki-workbench"
docker_workbench_spec = "anki-addon-workbench[gui]==0.4.0"
deck_smoke_render_limit = 3

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
